[package]
name = "cf-modkit-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit authentication library"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["development-tools"]
metadata.docs.rs.all-features = true

[lib]
name = "modkit_auth"

[lints]
workspace = true

[[example]]
name = "dispatcher_usage"
path = "examples/dispatcher_usage.rs"

[dependencies]
# Core dependencies
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
time = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
axum = { workspace = true, optional = true }
tower = { workspace = true }
http = { workspace = true }
modkit-security = { workspace = true }

# HTTP client
modkit-http = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }

[features]
default = ["axum-ext"]
axum-ext = ["axum"]
