[package]
name = "modkit-bootstrap"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
otel = ["tracing-opentelemetry", "opentelemetry_sdk"]

[lib]
name = "modkit_bootstrap"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
file-rotate = { workspace = true }
figment = { workspace = true, features = ["yaml", "env"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dsn = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
regex = { workspace = true }
modkit-db = { path = "../modkit-db" }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-appender = { workspace = true }
opentelemetry_sdk = { workspace = true, optional = true }
