[package]
name = "modkit-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
otel = ["tracing-opentelemetry", "tracing-error", "opentelemetry_sdk"]

[lib]
name = "modkit_bootstrap"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde-saphyr = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
file-rotate = { workspace = true }
figment = { workspace = true, features = ["yaml", "env"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dsn = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
regex = { workspace = true }
modkit-db = { path = "../modkit-db" }

# Backend dependencies
uuid = { workspace = true, features = ["v7"] }
tokio-util = { workspace = true, features = ["rt"] }

# OpenTelemetry support (optional)
tracing-opentelemetry = { workspace = true, optional = true }
tracing-error = { workspace = true, optional = true }
tracing-appender = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["trace", "rt-tokio"], optional = true }

# OoP bootstrap dependencies
modkit = { path = "../modkit" }
modkit-transport-grpc = { path = "../modkit-transport-grpc" }
module_orchestrator-grpc = { path = "../../modules/module_orchestrator/module_orchestrator-grpc" }
module_orchestrator-contracts = { path = "../../modules/module_orchestrator/module_orchestrator-contracts" }

[dev-dependencies]
temp-env = { workspace = true }
