[package]
name = "modkit-db-macros"
version = "0.1.0"
edition = "2021"
description = "Proc-macro derives for modkit-db secure ORM layer"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
proc-macro-error = { workspace = true }

[dev-dependencies]
trybuild = "1"

