[package]
name = "modkit-db-macros"
version.workspace = true
edition.workspace = true
description = "Proc-macro derives for modkit-db secure ORM layer"
license.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
proc-macro-error2 = { workspace = true }

[dev-dependencies]
trybuild = "1"

