[package]
name = "modkit-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
pg = ["sqlx/postgres", "sea-orm?/sqlx-postgres"]
mysql = ["sqlx/mysql", "sea-orm?/sqlx-mysql"]
sqlite = ["sqlx/sqlite", "sea-orm?/sqlx-sqlite"]
sea-orm = ["dep:sea-orm", "dep:modkit-db-macros"]
integration = []

# Default: sqlite + sea-orm for local development
default = ["sqlite", "sea-orm"]

# SECURITY: Escape hatch for administrative operations (OFF by default)
# NEVER enable in production builds
# Requires INSECURE_ESCAPE_ALLOW=1 environment variable at runtime
insecure-escape = []

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "macros", "uuid", "chrono"] }
xxhash-rust = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
time = { workspace = true }
sea-orm = { workspace = true, features = ["with-time"], optional = true }
modkit-db-macros = { path = "../modkit-db-macros", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"]}
modkit-security = { path = "../modkit-security" }
modkit-odata = { path = "../modkit-odata" }
bigdecimal = { workspace = true }
rust_decimal = { workspace = true }
ryu = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
figment = { workspace = true }
serde_with = "3.16.1"

[dev-dependencies]
tempfile = { workspace = true }
serde-saphyr = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

