[package]
name = "cf-modkit-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit database library"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["development-tools"]

[lib]
name = "modkit_db"

[lints]
workspace = true

[features]
# You can use: sqlite + sea-orm for local development
default = []
pg = ["sea-orm/sqlx-postgres", "sqlx/postgres"]
mysql = ["sea-orm/sqlx-mysql", "sqlx/mysql"]
sqlite = ["sea-orm/sqlx-sqlite", "sqlx/sqlite"]
integration = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
xxhash-rust = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
time = { workspace = true }
sea-orm = { workspace = true, features = ["with-time"] }
sea-orm-migration = { workspace = true }
modkit-db-macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
modkit-security = { workspace = true }
modkit-odata = { workspace = true }
modkit-utils = { workspace = true, features = ["humantime-serde"] }
bigdecimal = { workspace = true }
rust_decimal = { workspace = true }
ryu = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
figment = { workspace = true }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls"] }

[dev-dependencies]
tempfile = { workspace = true }
serde-saphyr = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
temp-env = { workspace = true }
trybuild = { workspace = true }
