[package]
name = "cf-modkit-errors-macro"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true
name = "modkit_errors_macro"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
