[package]
name = "modkit-errors-macro"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
