[package]
name = "modkit-errors"
version = "0.1.0"
edition = "2021"

[features]
default = []
utoipa = ["dep:utoipa"]
axum = ["dep:axum"]

[dependencies]
serde = { workspace = true }
utoipa = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
http = { workspace = true }

[dev-dependencies]
serde_json = "1"
