[package]
name = "modkit-errors"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
utoipa = ["dep:utoipa"]
axum = ["dep:axum", "dep:tracing"]

[dependencies]
serde = { workspace = true }
utoipa = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
http = { workspace = true }

[dev-dependencies]
serde_json = "1"
