[package]
name = "modkit-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
heck = { workspace = true }
strsim = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
modkit = { path = "../modkit", default-features = false }
modkit-security = { path = "../modkit-security" }
modkit-transport-grpc = { path = "../modkit-transport-grpc" }
uuid = { workspace = true }
tonic = { workspace = true }
