[package]
name = "cf-modkit-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit macros"
keywords = ["cyberfabric", "cyberfabric-modkit"]

[lib]
proc-macro = true
name = "modkit_macros"

[lints]
workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
heck = { workspace = true }
strsim = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
modkit = { workspace = true }
modkit-security = { workspace = true }
modkit-transport-grpc = { workspace = true }
tonic = { workspace = true }
