[package]
name = "modkit-node-info"
version = "0.1.0"
publish = false
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }
hostname = { workspace = true }
starship-battery = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v5"]}
local-ip-address = { workspace = true }
machine-uid = { workspace = true }
tracing = { workspace = true }
nvml-wrapper = { workspace = true }
once_cell = { workspace = true }
