[package]
name = "modkit-node-info"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }
hostname = { workspace = true }
starship-battery = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
uuid = { workspace = true, features = ["v4", "v5"]}
local-ip-address = { workspace = true }
machine-uid = { workspace = true }
tracing = { workspace = true }
nvml-wrapper = { workspace = true }
once_cell = { workspace = true }
