[package]
name = "modkit-odata-macros"
version.workspace = true
edition.workspace = true
description = "Proc-macro derives for OData protocol (FilterField, Schema, etc)"
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
proc-macro-error2 = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
modkit-odata = { path = "../modkit-odata" }
uuid = { workspace = true, features = ["v7"] }
