[package]
name = "modkit-odata"
version.workspace = true
edition = "2021"
license.workspace = true

[lints]
workspace = true

[features]
with-odata-params = ["dep:odata-params"]
with-utoipa = ["dep:utoipa"]

[dependencies]
modkit-errors = { path = "../modkit-errors" }
modkit-errors-macro = { path = "../modkit-errors-macro" }
bigdecimal = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["clock"] }
odata-params = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
utoipa = { workspace = true, optional = true }
http = { workspace = true }
