[package]
name = "cf-modkit-odata"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit OData library"

[lib]
name = "modkit_odata"

[lints]
workspace = true

[features]
with-odata-params = ["dep:odata-params"]
with-utoipa = ["dep:utoipa"]
chrono = []

[dependencies]
modkit-errors = { workspace = true }
modkit-errors-macro = { workspace = true }
bigdecimal = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["clock"] }
odata-params = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
utoipa = { workspace = true, optional = true }
http = { workspace = true }
