[package]
name = "modkit-security"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
