[package]
name = "cf-modkit-security"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit security library"
keywords = ["cyberfabric", "cyberfabric-modkit"]

[lib]
name = "modkit_security"

[lints]
workspace = true

[dependencies]
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
