[package]
name = "modkit-transport-grpc"
version.workspace = true
edition = "2021"
license.workspace = true

[lints]
workspace = true

[dependencies]
tonic = { workspace = true }
modkit-security = { path = "../modkit-security" }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
