[package]
name = "cf-modkit-transport-grpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit gRPC transport library"

[lib]
name = "modkit_transport_grpc"

[lints]
workspace = true

[dependencies]
tonic = { workspace = true }
modkit-security = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
