[package]
name = "cf-modkit-transport-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit gRPC transport library"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["network-programming"]
metadata.docs.rs.all-features = true

[lib]
name = "modkit_transport_grpc"

[lints]
workspace = true

[dependencies]
tonic = { workspace = true }
modkit-security = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
