[package]
name = "cf-modkit-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "modkit_utils"

[lints]
workspace = true

[features]
humantime-serde = ["dep:humantime", "dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
humantime = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
