[package]
name = "modkit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "modkit"

[features]
# Enable the runner and the runtime integration by default.
default = ["otel"]

# OpenTelemetry support for distributed tracing
otel = ["opentelemetry", "opentelemetry_sdk", "tracing-opentelemetry", "tracing-subscriber", "opentelemetry-otlp", "tonic"]

[dependencies]
# Project-local crates
modkit-macros = { path = "../modkit-macros" }
modkit-errors = { path = "../modkit-errors", features = ["utoipa", "axum"] }
modkit-db = { path = "../modkit-db" }
modkit-odata = { path = "../modkit-odata", features = ["with-odata-params"] }
module_orchestrator-contracts = { path = "../../modules/module_orchestrator/module_orchestrator-contracts" } # TODO: probably we need remove this dependency at the future

# Core deps
anyhow = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
figment = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Router/types used in contracts and runtime
axum = { workspace = true }
http = { workspace = true }

# OpenAPI/serde
utoipa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Performance / lock-free structures
parking_lot = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
thiserror = { workspace = true }
odata-params = { workspace = true }
uuid = { workspace = true, features = ["v7"]}
urlencoding = { workspace = true }

# HTTP client for traced requests
reqwest = { workspace = true }

# OpenTelemetry tracing support (optional) - full implementation
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

# gRPC support only for otel (optional)
tonic = { workspace = true, optional = true }

# Unix-specific dependencies for graceful process termination
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }

[dev-dependencies]
tower = { workspace = true }
trybuild = { workspace = true }
httpmock = { workspace = true }


