[package]
name = "modkit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "modkit"

[features]
# Enable the runner and the runtime integration by default.
default = ["otel"]
coverage_nightly = []

# OpenTelemetry support for distributed tracing
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry", "dep:tracing-subscriber", "dep:opentelemetry-otlp", "dep:tonic"]
bootstrap = ["dep:serde-saphyr", "dep:serde_yaml", "dep:module_orchestrator-grpc", "dep:tracing-appender", "dep:file-rotate", "dep:tracing-log", "dep:chrono", "dep:regex", "dep:url", "dep:dsn"]

[dependencies]
# Project-local crates
modkit-macros = { path = "../modkit-macros" }
modkit-errors = { path = "../modkit-errors", features = ["utoipa", "axum"] }
modkit-db = { path = "../modkit-db" }
modkit-odata = { path = "../modkit-odata", features = ["with-odata-params"] }
modkit-sdk = { path = "../modkit-sdk" }
module_orchestrator-sdk = { path = "../../modules/system/module_orchestrator/module_orchestrator-sdk" } # TODO: probably we need remove this dependency at the future
module_orchestrator-grpc = { path = "../../modules/system/module_orchestrator/module_orchestrator-grpc", optional = true }

# Core deps
anyhow = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
figment = { workspace = true }
file-rotate = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
url = { workspace = true, optional = true }
dsn = { workspace = true, optional = true }
regex = { workspace = true, optional = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }

# Router/types used in contracts and runtime
axum = { workspace = true }
http = { workspace = true }

# OpenAPI/serde
utoipa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
schemars = { workspace = true, features = ["derive"] }

# GTS support
gts = { workspace = true }
gts-macros = { workspace = true }

# Performance / lock-free structures
parking_lot = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
urlencoding = { workspace = true }

# HTTP client for traced requests
reqwest = { workspace = true }

# OpenTelemetry tracing support (optional) - full implementation
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

# gRPC support only for otel (optional)
tonic = { workspace = true, optional = true }

# Unix-specific dependencies for graceful process termination
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }

[dev-dependencies]
tower = { workspace = true }
trybuild = { workspace = true }
httpmock = { workspace = true }
tempfile = { workspace = true }
temp-env = { workspace = true }
