[package]
name = "api_ingress"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "api_ingress"
path = "src/lib.rs"

[[example]]
name = "update_assets"
path = "examples/update_assets.rs"

[dependencies]
modkit = { path = "../../libs/modkit" }
modkit-auth = { path = "../../libs/modkit-auth" }
modkit-security = { path = "../../libs/modkit-security" }
inventory = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }

dashmap = { workspace = true }
arc-swap = { workspace = true }
nanoid = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
matchit = { workspace = true }
governor = { workspace = true }

chrono = { workspace = true }

utoipa = { workspace = true }
http = { workspace = true }
rust-embed = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }

[features]
grpc = []
debug-errors = []
embed_elements = []
otel = []
