[package]
name = "directory_service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
parking_lot = { workspace = true }
modkit = { path = "../../libs/modkit" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
inventory = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

