[package]
name = "directory_service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[lints]
workspace = true

[dependencies]
parking_lot = { workspace = true }
modkit = { path = "../../libs/modkit" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
inventory = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

